# mysms-desktop-app

./: .gitignore  CMakeLists.txt  filedownloader.cpp  filedownloader.h  globalSettings.h  globalsettings.h  jsinterface.cpp  jsinterface.h  kdenotification.cpp  kdenotification.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mysms.desktop  mysms.icns  mysms.iss  mysms.notifyrc  mysms.pro  mysms.qrc  mysms.rc  networkcookiejar.cpp  networkcookiejar.h  networkreplyfilter.cpp  networkreplyfilter.h  notificationpopup.cpp  notificationpopup.h  notificationpopupmanager.cpp  notificationpopupmanager.h  notificationsummarywidget.cpp  notificationsummarywidget.h  qnetworkaccessmanagercustom.cpp  qnetworkaccessmanagercustom.h  qtlocalpeer.cpp  qtlocalpeer.h  qtlocalpeerFind.cpp  qtlockedfile.cpp  qtlockedfile.h  qtsingleapplication.cpp  (+13 more)
debian/: changelog  control  copyright  install
release/fonts/: fontGoogle.css
translation/: mysms_de.qm  mysms_de.ts
